--- a/apps/site/src/content/projects/somnorte.yaml
+++ b/apps/site/src/content/projects/somnorte.yaml
@@ -8,9 +8,9 @@ tags:
     - ''
 frameworks:
     - ''
-date: 'YYYY-MM'
+date: '2024-03'
 hero:
-    src: '/src/assets/images/projects/filtro_enade_2021/filtro_enade_2021_hero.png'
+    src: ''
     title: ''
     altText: ''
 # carousel:
