--- a/apps/site/src/content/projects/trocando_saberes.yaml
+++ b/apps/site/src/content/projects/trocando_saberes.yaml
@@ -8,10 +8,9 @@ tags:
     - ''
 frameworks:
     - ''
-date: ''
+date: '2023-07'
 hero:
-    src: '/src/assets/images/projects/filtro_enade_2021/filtro_enade_2021_hero.png'
+    src: ''
     title: ''
     altText: ''
-# s
 content: |
