--- a/apps/site/src/content/projects/filtro_enade_2021.yaml
+++ b/apps/site/src/content/projects/filtro_enade_2021.yaml
@@ -1,15 +1,17 @@
-title: 'Filtro Enade 2021'
+title: 'Filtro Enade 2021 - @suamulti'
 draft: false
 subtitle: 'Filtro para Instagram'
-summary: 'Um filtro do Instagram gamificado em que o jogador deve piscar para pular os obstáculos e alcançar o seu diploma ao final da aventura!'
+summary: 'Um filtro do Instagram gamificado onde o jogador deve piscar para pular obstáculos e alcançar o diploma ao final da aventura, promovendo o Enade 2021.'
 categories:
-    - ''
+    - 'Realidade Aumentada'
+    - 'Gamificação'
 tags:
-    - 'Augmented Reality'
     - 'Instagram'
     - 'Filter'
 frameworks:
-    - ''
+    - 'Meta Spark'
+    - 'JavaScript'
+    - 'TypeScript'
 date: '2022-02'
 hero:
     src: '/src/assets/images/projects/filtro_enade_2021/filtro_enade_2021_hero.png'
@@ -17,17 +19,18 @@ hero:
     altText: 'Banner do projeto Enade#2021'
 # carousel:
 #     -
-# partners:
-#     -
+partners:
+    - Agência MULTI
 content: |
-    # Filtro #Enade2021
+    O **Filtro Enade 2021** foi desenvolvido para engajar estudantes de forma interativa e divertida, promovendo o evento **Enade 2021**. O filtro utiliza a tecnologia de **Realidade Aumentada** para criar uma experiência gamificada, onde o jogador deve **piscar para pular obstáculos** e alcançar o diploma ao final da aventura.
 
-    > Filtro para Instagram
+    Durante o jogo, os usuários enfrentam **desafios progressivos**, com obstáculos que aumentam de dificuldade, incentivando a repetição e o compartilhamento da experiência nas redes sociais.
 
-    ## Sobre o Projeto
+    Desenvolvido no **Meta Spark** (antigo SparkAR), utilizando **JavaScript** e **TypeScript** para criar interações dinâmicas e responsivas.
 
-    Um filtro do Instagram gamificado em que o jogador deve piscar para pular os obstáculos e alcançar o seu diploma ao final da aventura!
+    - **Realidade Aumentada**: Criação de um ambiente imersivo e interativo.
+    - **Detecção de Piscar**: Uso de algoritmos para capturar movimentos faciais e traduzir em ações no jogo.
+    - **Gamificação**: Design de mecânicas de jogo para engajar e divertir os usuários.
+    - **Otimização para Instagram**: Garantia de performance e compatibilidade com a plataforma.
 
-    ## Tecnologias
-
-    Feito no SparkAR em JavaScript / TypeScript.
+    O filtro foi amplamente utilizado por estudantes e instituições, gerando **engajamento significativo** nas redes sociais e promovendo o **Enade 2021** de forma inovadora e criativa.
