--- a/apps/site/src/content/projects/jornada_vocacional_1.yaml
+++ b/apps/site/src/content/projects/jornada_vocacional_1.yaml
@@ -1,39 +1,35 @@
-title: 'Jornada Vocacional 1'
+title: 'Jornada Vocacional 1 - @suamulti'
 draft: false
-subtitle: 'Experiência Interativa (Web)'
-summary: 'A Jornada Vocacional UNICEPLAC foi uma experiência voltada à estudantes do Ensino Médio, que interagiram com o conteúdo do Centro Universitário.'
+subtitle: 'Experiência Interativa Web'
+summary: 'A Jornada Vocacional UNICEPLAC foi uma experiência interativa voltada para estudantes do Ensino Médio, explorando áreas de ensino e possíveis vocações.'
 categories:
-    - ''
-tags: []
+    - 'Interatividade'
+    - 'Educação'
+tags:
+    - 'Experiência Interativa'
+    - 'Ensino Médio'
 frameworks:
-    - ''
+    - 'JavaScript'
+    - 'JQuery'
+    - 'AJAX'
+    - 'CakePHP'
+    - 'MySQL'
 date: '2020-10'
 hero:
     src: '/src/assets/images/projects/jornada_1/jornada_1_hero.png'
     title: 'Banner do projeto Jornada Vocacional 1'
-    altText: ''
+    altText: 'Banner do projeto Jornada Vocacional 1'
 # carousel:
 #     -
-# partners:
-#     -
+partners:
+    - 'UNICEPLAC'
 content: |
-    # Jornada Vocacional (1º Edição)
+    A **Jornada Vocacional UNICEPLAC** foi criada para oferecer uma experiência interativa e imersiva a estudantes do Ensino Médio, especialmente em tempos de pandemia. O objetivo era apresentar diversas áreas de ensino e possíveis vocações, conectando os estudantes ao universo acadêmico de forma inovadora e envolvente.
 
-    > Experiência Interativa (Web)
+    O projeto contou com três ambientes principais:
 
-    ## Sobre o Projeto
+    - **Tela Inicial**: Apresentação e login para acesso à plataforma.
+    - **Sistema Solar**: Um ambiente gamificado com desafios inspirados em clássicos de arcade.
+    - **Planetas**: Espaços dedicados a conteúdos educativos, como vídeos, quizzes, agendamentos de oficinas e outras atividades interativas.
 
-    Idealizada para trazer imersão em tempos de pandemia, a Jornada Vocacional UNICEPLAC foi uma experiência voltada à estudantes do Ensino Médio, que interagiram com o conteúdo do Centro Universitário para e descobrir mais sobre diversas áreas de ensino e possíveis vocações.
-
-    Com intuito de os levar a conhecerem melhor o campus e motivá-los a realizar atividades tanto online quanto presenciais, o projeto apresentou 03 Ambientes aos estudantes:
-
-    - A Tela Inicial de apresentação e login;
-    - O Sistema Solar onde encontraram desafios baseados em clássicos de arcade e
-    - Os Planetas onde foram levados aos conteúdos oferecidos, como vídeos, agendamentos em oficinas, quizzes e outras atividades!
-
-    Durante o evento, os estudantes ganharam pontos por realizar atividades e concorreram à vários prêmios oferecidos pela Instituição de Ensino.
-
-    ## Tecnologias
-
-    - Interações em JavaScript, JQuery e AJAX;
-    - Estrutura baseada em CakePHP e MySQL.
+    Durante o evento, os estudantes acumulavam pontos ao participar das atividades, concorrendo a prêmios oferecidos pela instituição. A Jornada Vocacional foi um sucesso, promovendo engajamento e despertando o interesse dos participantes em explorar suas vocações.
