--- a/apps/site/src/content/team/ruan.yaml
+++ b/apps/site/src/content/team/ruan.yaml
@@ -7,9 +7,9 @@ skills:
       tooltip: Front End
     - name: QA
       tooltip: Analista de Qualidade
-links:
-    - name: linkedin
+socials:
+    - type: linkedin
       url: https://www.linkedin.com/in/ruanblotta/
-    - name: github
+    - type: github
       url: https://github.com/ruanblotta
 photoSrc: /images/team/ruan.jpg
