--- a/apps/site/src/content/team/alexandre.yaml
+++ b/apps/site/src/content/team/alexandre.yaml
@@ -9,11 +9,11 @@ skills:
       tooltip: Produção Musical
     - name: SFX
       tooltip: Sound Effects
-links:
-    - name: imdb
+socials:
+    - type: imdb
       url: https://www.imdb.com/name/nm11223910/
-    - name: linkedin
+    - type: linkedin
       url: https://www.linkedin.com/in/alexandre-barbosa-083b83b4/
-    - name: youtube
+    - type: youtube
       url: https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ/
 photoSrc: /images/team/alexandre.png
