--- a/apps/site/src/content/team/william.yaml
+++ b/apps/site/src/content/team/william.yaml
@@ -9,9 +9,9 @@ skills:
       tooltip: Frontend
     - name: Tech Artist
       tooltip: Tech Artist
-links:
-    - name: github
+socials:
+    - type: github
       url: https://github.com/wbmagalhaes/
-    - name: linkedin
+    - type: linkedin
       url: https://www.linkedin.com/in/william-bernardes-magalhaes/
 photoSrc: /images/team/william.png
