feat: add new badge components and update project content with new images and descriptions

--- a/apps/site/src/content/projects/quase_calouro.yaml
+++ b/apps/site/src/content/projects/quase_calouro.yaml
@@ -1,4 +1,4 @@
-title: '@quasecalouro'
+title: 'Quase Calouro - @multi'
 draft: false
 subtitle: 'Landing page baseada em Wordpress'
 summary: 'Landing page para capturar leads e oferecer conteúdos exclusivos, como material didático, videoaulas e simulados, com foco em estudantes.'
