refactoring content to work with new collection schemas

--- a/apps/site/src/content/projects/_project_template.yaml
+++ b/apps/site/src/content/projects/_project_template.yaml
@@ -1,9 +1,9 @@
 title: Project
 draft: true
-subtitle:
-summary:
-categories:
-    -
+subtitle: A short subtitle of the project.
+summary: A short summary of the project.
+platforms:
+    - 
 tags:
     -
 frameworks:
