--- a/apps/site/src/content/projects/centra_engenharia.yaml
+++ b/apps/site/src/content/projects/centra_engenharia.yaml
@@ -2,15 +2,18 @@ title: 'Centra Engenharia'
 draft: false
 subtitle: 'Plataforma de Gestão de Obras'
 summary: 'Aplicação web e mobile para facilitar a comunicação e troca de documentos entre equipe, clientes e gerentes.'
-categories:
-    - 'Web'
-    - 'Mobile'
-tags:
-    - 'Gestão de Obras'
-    - 'Construção Civil'
-frameworks:
-    - 'Flutter'
-    - 'Firebase'
+category:
+    products:
+        - systems
+    platforms:
+        - web
+        - mobile
+    tags:
+        - management
+    #   - construcao-civil
+    frameworks:
+        - flutter
+        - firebase
 date: '2024-01'
 hero:
     src: '/src/assets/images/projects/centra_engenharia/centra_engenharia_hero.png'
@@ -23,15 +26,15 @@ carousel:
     - src: '/src/assets/images/projects/centra_engenharia/screenshot2.png'
       title: 'Tela de gerenciamento de obras no aplicativo Centra Engenharia'
       altText: 'Imagem mostrando a tela de gerenciamento de obras no aplicativo Centra Engenharia'
-partners:
-    - 'Centra Engenharia'
+# partners:
+#   - centra-engenharia
 content: |
-  O **Aplicativo Centra Engenharia** é uma plataforma completa de gestão de obras, criada com o objetivo de modernizar e simplificar o cotidiano de engenheiros, gerentes e clientes.
+    O **Aplicativo Centra Engenharia** é uma plataforma completa de gestão de obras, criada com o objetivo de modernizar e simplificar o cotidiano de engenheiros, gerentes e clientes.
 
-  Desenvolvido com **Flutter** para garantir performance nativa em dispositivos Android, iOS e navegadores web, o aplicativo possibilita:
+    Desenvolvido com **Flutter** para garantir performance nativa em dispositivos Android, iOS e navegadores web, o aplicativo possibilita:
 
-  - **Comunicação em tempo real** com a equipe via mensagens e notificações;
-  - **Armazenamento e acesso rápido** a documentos, como cronogramas, relatórios e arquivos técnicos;
-  - **Monitoramento do andamento da obra**, controle de custos e entrega de materiais.
+    - **Comunicação em tempo real** com a equipe via mensagens e notificações;
+    - **Armazenamento e acesso rápido** a documentos, como cronogramas, relatórios e arquivos técnicos;
+    - **Monitoramento do andamento da obra**, controle de custos e entrega de materiais.
 
-  A **Space Wizard Studios** foi responsável por toda a arquitetura e desenvolvimento do projeto, colaborando de forma direta com os gestores da **Centra Engenharia** para construir uma solução sob medida para as necessidades do setor.
+    A **Space Wizard Studios** foi responsável por toda a arquitetura e desenvolvimento do projeto, colaborando de forma direta com os
