--- a/apps/site/src/content/projects/tavern_tale.yaml
+++ b/apps/site/src/content/projects/tavern_tale.yaml
@@ -2,14 +2,17 @@ title: 'Tavern Tale Studio'
 draft: false
 subtitle: 'Site Corporativo'
 summary: 'Site corporativo para o estúdio de jogos Tavern Tale, desenvolvido em Wordpress com Elementor, focado em apresentar os projetos e a identidade do estúdio.'
-categories:
-    - 'Web'
-tags:
-    - 'Site Corporativo'
-    - 'Wordpress'
-frameworks:
-    - 'Wordpress'
-    - 'Elementor'
+category:
+    products:
+        - systems
+    platforms:
+        - web
+    # tags:
+    #   - 'Site Corporativo'
+    #   - 'Wordpress'
+    # frameworks:
+        # - wordpress # Sugestão: Criar frameworks/wordpress.yaml
+        # - elementor # Sugestão: Criar frameworks/elementor.yaml
 date: '2023-09'
 hero:
     src: '/src/assets/images/projects/tavern_tale/tavern_tale_hero.png'
